# seam

./: .devenv-direnvrc  .envrc  .gitignore  CLAUDE.md  Cargo.toml  PROGRESS.md  README.md  SEAM_PLAN.md  devenv.nix  shell.nix
docs/: cli.md  commands.md  development.md  export.md  firmware.md  multi-device.md  python-sdk.md  recording.md  seam-toml.md  wire-protocol.md  zephyr.md
examples/accel-logger/: Cargo.toml  fixture.seam  plot.py  seam.toml
examples/accel-logger/src/: main.rs
examples/multi-node/: fuse.py
examples/multi-node/node_a/: seam.toml
examples/multi-node/node_b/: seam.toml
seam-build/: Cargo.toml
seam-build/src/: codegen.rs  lib.rs  schema.rs
seam-fw/: Cargo.toml  build.rs  seam.toml
seam-fw/src/: channel_info.rs  codec.rs  error.rs  lib.rs
seam-fw/src/transport/: ble_nus.rs  mod.rs  usb_cdc.rs
seam-inspect/: pyproject.toml
seam-inspect/seam_inspect/: __init__.py  __main__.py
seam-py/: pyproject.toml
seam-py/seam/: __init__.py  cli.py  codec.py  device.py  exceptions.py  multi.py  recording.py  schema.py
seam-py/seam/bridge/: csv.py  mcap.py  rerun.py
seam-py/seam/transport/: __init__.py  ble.py  serial.py
seam-py/tests/: conftest.py  test_cli.py  test_codec.py  test_device.py  test_recording.py  test_schema.py
seam-zephyr/: CMakeLists.txt  Kconfig
seam-zephyr/include/seam/: codec.h  sampler.h  transport.h
seam-zephyr/src/: codec.c  sampler.c
seam-zephyr/src/transport/: ble_nus.c  usb_cdc.c
seam-zephyr/zephyr/: module.yml
